// Copyright 2015 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package dom_distiller;

message AdaBoostProto {
  required int32 num_stumps = 1;
  required int32 num_features = 2;
  repeated StumpProto stump = 3;
}

message StumpProto {
  required int32 feature_number = 1;
  required double split = 2;
  required double weight = 3;
}
